--- a/.skhdrc
+++ b/.skhdrc
@@ -1,9 +1,9 @@
 # Focus
-ctrl + alt - j :    yabai -m window --focus recent
-ctrl + alt - h :    yabai -m window --focus prev || \
-                    yabai -m window --focus last
-ctrl + alt - l :    yabai -m window --focus next || \
-                    yabai -m window --focus first
+cmd + ctrl - down :    yabai -m window --focus recent
+cmd + ctrl - left :    yabai -m window --focus prev || \
+                       yabai -m window --focus last
+cmd + ctrl - right :   yabai -m window --focus next || \
+                       yabai -m window --focus first
 
 # Swap
 ctrl + alt + shift - j :    yabai -m window --swap recent
@@ -11,7 +11,7 @@ ctrl + alt + shift - h :    yabai -m window --swap prev
 ctrl + alt + shift - l :    yabai -m window --swap next
 
 # Resize
-cmd + ctrl - h :    yabai -m window --ratio rel:-0.166666
-cmd + ctrl - l :    yabai -m window --ratio rel:00.166666
-cmd + ctrl - j :    yabai -m window --toggle zoom-parent
-cmd + ctrl - k :    yabai -m window --ratio abs:00.5
+cmd + ctrl + shift - left :     yabai -m window --ratio rel:-0.166666
+cmd + ctrl + shift - right :    yabai -m window --ratio rel:00.166666
+cmd + ctrl + shift - down :     yabai -m window --toggle zoom-parent
+cmd + ctrl + shift - up :       yabai -m window --ratio abs:00.5
