--- a/.skhdrc
+++ b/.skhdrc
@@ -1,4 +1,5 @@
 # Focus
+cmd + ctrl - up :    brew services restart yabai
 cmd + ctrl - down :    yabai -m window --focus recent
 cmd + ctrl - left :    yabai -m window --focus prev || \
                        yabai -m display --focus west
