--- a/.yabairc
+++ b/.yabairc
@@ -38,3 +38,4 @@ yabai -m rule --add label="About This Mac" app="System Information" title="About
 yabai -m rule --add title="Picture in Picture" manage=off
 yabai -m rule --add app="Simulator" manage=off
 yabai -m rule --add app="licecap" manage=off
+yabai -m rule --add app="Emacs" title="Emacs Everywhere" manage=off
