--- a/.yabairc
+++ b/.yabairc
@@ -32,9 +32,9 @@ yabai -m config right_padding                2
 yabai -m config window_gap                   3
 
 # Windows to exclude from bsp
-yabai -m rule --add label="System Preferences" app="^System Preferences$" title=".*" manage=off
-yabai -m rule --add label="Software Update" title="Software Update" manage=off
-yabai -m rule --add label="About This Mac" app="System Information" title="About This Mac" manage=off
+yabai -m rule --add app="^System Preferences$" title=".*" manage=off
+yabai -m rule --add title="Software Update" manage=off
+yabai -m rule --add app="System Information" title="About This Mac" manage=off
 yabai -m rule --add title="Picture in Picture" manage=off
 yabai -m rule --add app="Simulator" manage=off
 yabai -m rule --add app="licecap" manage=off
