--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -7,6 +7,8 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "buffer_font_family": "JetBrains Mono",
+  "buffer_font_weight": 600.0,
   "telemetry": {
     "diagnostics": false,
     "metrics": false
